@@ -1,3 +1,8 @@
+2003-05-21  Bradley Bell  <btb@icculus.org>
+
+	* include/physfsrwops.h, misc/physfsrwops.c: added physfsrwops
+	stuff
+
 2003-05-20  Bradley Bell  <btb@icculus.org>
 
 	* include/cfile.h: added cfile_close wrapper
